<resources>
    <string name="app_name">PocketGithub</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username
        completions."
    </string>
    <string name="skip">Skip</string>
    <string name="search">Search</string>
    <string name="search_repositories">Search repositories</string>
    <string name="stars">Stars</string>
    <string name="forks">Forks</string>
    <string name="updated">Updated</string>
    <string name="repository">Repository</string>
    <string name="fork_count">Forks count</string>
    <string name="watchers_count">Watchers count</string>
    <string name="open_issues_count">Open issues count</string>
    <string name="check_repository_details">Check repository details</string>
    <string name="language">Language</string>
    <string name="default_branch">Default branch</string>
    <string name="description">Description</string>

    <string name="default_value_for_not_valide_value">Not known!</string>
</resources>
