<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.trollologic.pocketgithub.search.SearchActivity">

        <RadioGroup
            android:id="@+id/filterGroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/stars"
                android:text="@string/stars"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:onClick="onFilterAction"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/forks"
                android:text="@string/forks"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:onClick="onFilterAction"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/updated"
                android:text="@string/updated"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:onClick="onFilterAction"
                android:layout_height="wrap_content" />
        </RadioGroup>
        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="@dimen/activity_vertical_margin"

            android:id="@+id/result_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</layout>